<package>
  <name>msi_2k16_17_gazebo</name>
  <version>0.1.0</version>
  <description>msi_gazebo</description>
  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>

  <url type="bugtracker">https://github.com/osrf/gazebo_ros_demos/issues</url>
  <url type="repository">https://github.com/osrf/gazebo_ros_demos</url>

  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
<!--   <run_depend>rrbot_control</run_depend> -->
  <run_depend>msi_2k16_17_urdf</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
