<?xml version="1.0"?>
<package>
  <name>msi_2k16_17_urdf</name>
  <version>0.2.7</version>
  <description>Mars Rover IITB URDF description</description>
  <author email="agrim9gupta@gmail.com">Agrim Gupta</author>

  <maintainer email="agrim9gupta@gmail.com">Agrim Gupta</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>tf</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>ur_description</run_depend>
  <run_depend>lms1xx</run_depend>


  <export>
  </export>
</package>
